统一按钮样式

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -96,6 +96,23 @@
         .propertyGroup_property_dynamicControlField_content.xui-text{
          padding-top: 16px;
         }
+        .xui-removeImageButton span,.close.xui-close{
+            height: 20px;
+            width: 20px;
+            background-color: rgb(141, 141, 141);
+            line-height: 19px;
+            border-radius: 15px;
+        }
+        .close.xui-close{
+            position: absolute;
+            right: -24px;
+        }
+        .xui-removeImageButton{
+            position: absolute !important;
+            top: -13px !important;
+            right: -9px !important;
+        }
+
     </style>
 {% endblock %}
 
