签到设置，统一

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -68,6 +68,7 @@
         }
         .propertyGroup.xui-propertyView-app-SignSettingGroup{
             width:480px;
+            padding-left: 32px;
         }
         .propertyGroup_property_dynamicControlField_control,.propertyGroup_property_dynamicControlField_content.xui-text{
             width:480px;
