更新投票样式

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -86,7 +86,7 @@
         .propertyGroup_property_textareaField .propertyGroup_property_label{
             width:60px;
         }
-        .propertyGroup.xui-propertyView-app-SignNameGroup .input-small.xui-propertyGroup-input{
+        .propertyGroup.xui-propertyView-app-SignNameGroup .input-small.xui-propertyGroup-input,.propertyGroup.xui-propertyView-app-ReplyGroup .input-small.xui-propertyGroup-input{
             width:310px !important;
         }
         .propertyGroup_property_input.pl5{
