签到，分享部分css

--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -36,6 +36,9 @@
             border-radius: 3px;
             margin: 10px;
         }
+        .ml5.fb{
+            margin-bottom: 12px;
+        }
         .xui-propertyView-app-ShareGroup,.xui-propertyView-app-ReplyGroup,.xui-propertyView-app-SignSettingGroupName{
             border-top: 1px solid #DDDDDD;
             padding-top: 15px;
@@ -112,6 +115,9 @@
             position: absolute !important;
             top: -13px !important;
             right: -9px !important;
+        }
+        .propertyGroup.xui-propertyView-app-ShareGroup .propertyGroup_property_label{
+            margin-top: 10px;
         }
 
     </style>
