--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -174,7 +174,7 @@
         </div>
         <div class="wui-rules-footer-div">
             <div class="wui-rules-i-desc">备注:签到奖励可以到<a class="wui-rules-i-center">个人中心</a>查看</div>
-            <div class="wui-rules-i-btn"><button class="wui-btn wui-btn-back">返回签到</button></div>
+            <div class="wui-rules-i-btn"><button class="wui-btn wui-btn-back" style="letter-spacing: 4px;">返回签到</button></div>
         </div>
     </div>
 {% endblock %}
