--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -86,6 +86,7 @@
 			</tr>
 		</thead>
 		<tbody>
+		<div id="__json-members" class="hidden">${JSON.stringify(items)}</div>
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}" class="xa-selectTr">
 			<td style="position:relative;" >
