--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -114,17 +114,15 @@
 					${item.created_at}
 				</td>
 				<td>
-					{{if item.coupon_status_id==0 }}
-						<b>${item.coupon_status}</b>
-					{{else item.coupon_status_id==1}}
+					{{if item.coupon_status_id==1}}
 						<b style="color:#5D8F17">${item.coupon_status}</b>
-					{{else item.coupon_status_id==2}}
-						<b style="color:#DB2009">${item.coupon_status}</b>
+					{{else}}
+						<b>未使用</b>
 					{{/if}}
 				</td>
 				<td>
 					<a class="xa-detail" href="javascript:void(0);" data-member-name="${item.participant_name}">查看引入详情</a><br>
-					{{if item.coupon_status_id}}
+					{{if item.coupon_status_id==1}}
 						<a href="/mall2/order/?order_id=${item.order_id}" target="_blank">查看使用订单</a>
 					{{/if}}
 				</td>
