--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -268,12 +268,14 @@
                         id: W.appRecordId
                     },
                     success: function(data) {
+                        prize_info = data;
+                        status = '已签到';
+                        fillPrizeInfo(prize_info);
                         resultDialog.render(true, {});
-                        $this.hide().sibling().show();
+                        $this.hide().siblings().show();
                     },
                     error: function(data) {
                         resultDialog.render(false, data);
-                        $this.hide().siblings().show();
                     }
                 });
 
@@ -284,10 +286,29 @@
         $('.wa-user-integral').html(member_info.user_integral);
         $('.wa-user-icon').find('img').attr('src', member_info.user_icon);
         //填充签到奖励信息
+        fillPrizeInfo(prize_info);
+        //绑定规则信息事件
+        $('.wa-signPageDiv').find('.wa-rules').on('click', function(){
+            $('.wa-signPageDiv').hide();
+            $('.wa-rules-div').show();
+        });
+	});
+
+    function fillPrizeInfo(prize_info){
         if('已签到' != status){
-            $('.wa-daily_points').html(prize_info.daily_prize.integral || 0);
-            if (prize_info.daily_prize.coupon){
-                prize_html = '"'+prize_info.daily_prize.coupon.name+'"';
+            var temp_integral,
+                temp_coupon;
+            if(!$.isEmptyObject(prize_info.serial_prize)) {
+                alert(11);
+                temp_integral = prize_info.serial_prize.integral;
+                temp_coupon = prize_info.serial_prize.coupon;
+            }else{
+                temp_integral = prize_info.daily_prize.integral;
+                temp_coupon = prize_info.daily_prize.coupon;
+            }
+            $('.wa-daily_points').html(temp_integral || 0);
+            if (temp_coupon.id != 0){
+                prize_html = '"'+temp_coupon.name+'"';
                 prize_html += '一张';
             }else{
                 prize_html = ''
@@ -295,15 +316,28 @@
             $('.wa-daily_prizes').html(prize_html);
         }else{
             $('.wa-sign-btn').hide();
-            $('.wa-sign-board').find('.wa-i-serial-count b').html(),show();
+            var temp_prize = prize_info.next_serial_prize;
+            var str = [];
+            if(temp_prize){
+                $('.wa-sign-board').show().find('.wa-i-serial-count b').html(prize_info.serial_count);
+                if(temp_prize.prize.integral != 0){
+                    str.push("连续签到"+temp_prize.count+"天可领取"+temp_prize.prize.integral+"积分. ");
+                }
+                if(temp_prize.prize.coupon.id != 0){
+                   str.push(" \""+temp_prize.prize.coupon.name+"\" 一张");
+                }
+            }else{
+                var tomorrow_prize = prize_info.daily_prize;
+                if(tomorrow_prize.prize.integral != 0){
+                    str.push("明天可领取"+tomorrow_prize.prize.integral+"积分");
+                }
+                if(tomorrow_prize.prize.coupon.id != 0){
+                   str.push(", \""+tomorrow_prize.prize.coupon.name+"\" 一张");
+                }
+            }
+            $('.wa-prize-board').html(str.toString());
         }
-
-        //绑定规则信息事件
-        $('.wa-signPageDiv').find('.wa-rules').on('click', function(){
-            $('.wa-signPageDiv').hide();
-            $('.wa-rules-div').show();
-        });
-	});
+    }
 </script>
 {% endblock %}
 
