bug 5120 （样式问题）【微商城管理】-【订单】-【所有订单】-【订单详情】中的商品的商品名称鼠标移动上的样式错误

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -268,7 +268,7 @@
               <td class="xui-td-img"{% if product.noline %} style="border-top:none;"{% endif %}><img width="42" height="42" src="{{product.thumbnails_url}}"></td>
               <td class="xui-td-first"{% if product.noline %} style="border-top:none;"{% endif %}>
                 <div class="xui-a-productname">
-                  <a style="color:#333;">
+                  <span style="color:#333;">
                   {% if product.promotion.type == 'flash_sale' %}
                     [限时抢购]
                   {% elif product.promotion.type == 'premium_sale:premium_product' %}
@@ -278,7 +278,7 @@
                     [会员优惠]
                   {% endif %}
 
-                  {{product.name}}</a>
+                  {{product.name}}</span>
                 </div>
                 <p class="xui-colorsize">
                   <span>
