--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -348,9 +348,10 @@
                                     {% if not order.has_sub_order %}
                                     <span class="xui-button">
                                         {% if order.express_number %}
-                                                {% if order.session_data.has_comfire_button %}
-                                                <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
-                                                {% endif %}
+                                            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流</a>
+                                            {% if order.session_data.has_comfire_button %}
+                                            <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
+                                            {% endif %}
                                         {% else %}
                                             <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
                                         {% endif %}
