--- a/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
+++ b/weapp/mall/templates/mall/editor/create_red_envelope_rule.html
@@ -31,26 +31,6 @@
       border: 0;
       background-color:rgba(0,0,0,0.5);
   }
-{#  .xui-create-redEnvelope-page .uploadify-button:after,#}
-{#  .xui-create-redEnvelope-page .uploadify-button:before{#}
-{#    content:"";#}
-{#    display: inline-block;#}
-{#    background: #e5e5e5;#}
-{#    position: absolute;#}
-{#  }#}
-{#  .xui-create-redEnvelope-page .uploadify-button:after{#}
-{#    left:24px;#}
-{#    top:45px;#}
-{#    width:45px;#}
-{#    height:3px;#}
-{##}
-{#  }#}
-{#  .xui-create-redEnvelope-page .uploadify-button:before{#}
-{#    left:45px;#}
-{#    top:25px;#}
-{#    width:3px;#}
-{#    height:45px;#}
-{#  }#}
   .xui-create-redEnvelope-page .uploadify-button-text{
     color:#fff;
   }
@@ -209,7 +189,8 @@
       <label class="control-label col-sm-2 col-sm-offset-1 pt0 w110">活动说明</label>
       <div class="controls">
           <div style="margin-left:120px;">
-            <textarea class="xui-hide" id="detail" name="detail" data-ui-role="richtext-editor" data-type="full" data-height="150" data-width="420">
+            <div class="xui-i-help">(上传图片要求宽度在480~620之间，高度小于等于960，大小不超过500k)</div>
+            <textarea class="xui-hide" id="detail" name="detail" data-ui-role="richtext-editor-red" data-maxCount="1000" data-type="full" data-height="150" data-width="420">
                 {% if red_envelope_rule %}{{ red_envelope_rule.use_info|format_emotion|safe }}{% endif %}
             </textarea>
           </div>
@@ -251,6 +232,26 @@
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
+W.registerUIRole('textarea[data-ui-role="richtext-editor-red"]', function() {
+    var $textarea = $(this);
+    var type = $textarea.attr('data-type');
+    var height = parseInt($textarea.attr('data-height'));
+    var width = parseInt($textarea.attr('data-width'));
+    var maxCount = parseInt($textarea.attr('data-maxCount'));
+    var editor = new W.view.common.RichTextEditor({
+        el: $textarea.get(),
+        type: type,
+        width: width,
+        height:height,
+        autoHeight:false,
+        imgSuffix: "uid="+W.uid,
+        wordCount: true,
+        maxCount: maxCount
+    });
+    editor.render();
+
+    $textarea.data('view', editor);
+});
 $(document).ready(function(){
   // $('#coupon_rule').change()
   $('.uploadify object').attr('height','90');
