签到：签到成功界面样式

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -173,7 +173,7 @@
             </ol>
         </div>
         <div class="wui-rules-footer-div">
-            <div class="wui-rules-i-desc">备注:签到奖励可以到<a class="wui-rules-i-center">个人中心</a>查看</div>
+            <div class="wui-rules-i-desc">备注:签到奖励可以到<a class="wui-rules-i-center wa-rules-i-center">个人中心</a>查看</div>
             <div class="wui-rules-i-btn"><div class="wui-btn wui-btn-back wa-btn-back" style="letter-spacing: 4px;margin-left: auto;margin-right: auto;">返回签到</div></div>
         </div>
     </div>
