--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -179,7 +179,7 @@ ui-appPage-commonStyle">
 			data-args='{"id": "{{activity_id}}"}'
 			data-template-id="#table"
 			data-enable-paginator="true"
-			data-enable-sort="true"
+			data-enable-sort="false"
 			data-selectable="false"
 			data-disable-header-select="true"
 			data-item-count-per-page="10"
@@ -194,13 +194,13 @@ ui-appPage-commonStyle">
                 <thead>
                     <tr>
                         <th>会员</th>
-                        <th>第一次签到</th>
-                        <th>最后一次签到</th>
-                        <th>累计次数</th>
-                        <th>连续次数</th>
-                        <th>最高连续次数</th>
-                        <th>奖励总积分</th>
-                        <th>优惠券奖励</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">第一次签到</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">最后一次签到</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">累计次数</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">连续次数</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">最高连续次数</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">奖励总积分</th>
+                        <th class="tx_srotable xui-Blue" data-sort-attr="created_at" data-sort-direction="up">优惠券奖励</th>
                     </tr>
                 </thead>
                 <tbody>
