样式问题【店铺装修】预览时，帮助中心，电话样式错乱

--- a/weapp/termite2/templates/termite2/termite_preview.html
+++ b/weapp/termite2/templates/termite2/termite_preview.html
@@ -22,7 +22,7 @@
     </div>
     <div class="xui-navBar">
         <div class="xui-i pr">
-            <div class="xui-headerActionBar" style="bottom:40px">
+            <div class="xui-headerActionBar" style="top:-40px;">
                 <span class="mr10">
                     <span class="">帮助中心</span>
                     <span class=" ml5">|</span>
