--- a/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/signdescription/signdescription.html
@@ -7,7 +7,7 @@
 
         .wui-SignPageDiv {
             width: 100%;
-            height: 540px;
+            height: 560px;
             background-color: #F0F0F0;
         }
 
@@ -99,6 +99,9 @@
             position: absolute;
         }
 
+        .wui-SignCircle.wa-sign-btn{
+            margin-top: 30px;
+        }
         .wui-SignSign .wui-SignChr {
             color: white;
             font-size: 2.5em;
@@ -113,6 +116,7 @@
         .wui-SignCircle.wa-sign-board{
             background-color: #F0F0F0;
             font-weight: bold;
+            margin-top: 30px;
 
         }
         .wui-SignCircle.wa-sign-board .wui-SignSign{
