--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -424,8 +424,14 @@
 /*
 *会员详情页面
 */
- .xui-memberOrderPayDialog .modal-content {
-	width: 550px;
+.xui-memberOrderPayDialog .xui-cancelCover {
+  width: 100%;
+  height: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  line-height: 20px;
 }
 .xui-memberOrderPayDialog .modal-body{
 	padding:0px;
