辅助空白修改高度并且增加背景颜色功能

--- a/weapp/termite/static/termite_js/app/component/wepage/block/block.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/block/block.html
@@ -5,6 +5,6 @@
     data-component-cid="{{component.cid}}" 
     class="wepage-block"
 >
-    <div style="height:{{component.model.height}}px;" class="wa-inner-block"></div>
+    <div style="height:{{component.model.height}}px;background-color: {{component.model.background_color}}" class="wa-inner-block"></div>
 </div>
 {% endifequal %}
