--- a/weapp/static_v2/css/member.css
+++ b/weapp/static_v2/css/member.css
@@ -424,6 +424,15 @@
 /*
 *会员详情页面
 */
+.xui-firendlistdialog .xui-cancelCover {
+  width: 100%;
+  height: 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  bottom: 0;
+  color: #fff;
+  line-height: 20px;
+}
 .xui-memberOrderPayDialog .xui-cancelCover {
   width: 100%;
   height: 20px;
