mod红包分析样式问题

--- a/weapp/mall/templates/mall/editor/red_envelope_participences.html
+++ b/weapp/mall/templates/mall/editor/red_envelope_participences.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="xa-redMemberFilterView xui-filterPanel pb10 mb15"></div>
     <div class="panel panel-default xui-tableBox">
-		<div class="fans_data_title"><div class="fans_data_name ml10 mt10 mr5">{{ red_envelope_name }}</div>
+		<div class="fans_data_title"><div class="fans_data_name ml10 mt10 mr5">{{ red_envelope_name }}分析</div>
 			<div class="fans_data_date">({{ red_envelope_start_time }}至{{ red_envelope_end_time }})</div>
 		</div>
 		<ul class="fans_data_ul xui-weixin-outlinePage ml10 mt10">
