--- a/weapp/static_v2/js/view/mall_red_member_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_red_member_filter_view/template.html
@@ -29,11 +29,11 @@
 			</select>
 		</div>
 	</div>
+	<div class="tc">
+		<a class="btn btn-primary ml20 mr10 xa-search xui-fontBold" href="javascript:void(0);">查询</a>
+		<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重置</a>
+		<!--<a class="btn btn-default xa-more-filter" href="javascript:void(0);">高级查询</a>-->
+	</div>
 </div>
-<div class="tc">
 
-	<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查询</a>
-	<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重置</a>
-	<!--<a class="btn btn-default xa-more-filter" href="javascript:void(0);">高级查询</a>-->
-</div>
 </script>
